[package]
name = "marked-path"
version = "0.1.0"
edition = "2024"
description = "Type-safe path wrappers with compile-time absolute/relative guarantees"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jaysones/marked-path"
rust-version = "1.85"

[dependencies]
wherror = "2.3.1"

[dev-dependencies]
rstest = "0.24"
tempfile = "3.26.0"
